objects/agf__ADM_Release_Signoff__c.object
<CustomObject>
    <fields>
        <fullName>agf__AppStore_Approval__c</fullName>
        <description>This is used by the AppStore teams to provide the date when they signed off at Release Freeze</description>
        <label>AppStore Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__AppStore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by the AppStore team to provide signoff</description>
        <label>AppStore</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoff2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>NO GO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Release Signoff</relationshipLabel>
        <relationshipName>Release_Signoff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Core_Approval__c</fullName>
        <label>Core Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Core__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Core</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzW0MAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Dev_Approval__c</fullName>
        <label>Engineering Exec Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Dev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineering Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzRbMAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Doc_Approval__c</fullName>
        <label>Doc Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Doc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doc</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzW1MAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__L10N_Approval__c</fullName>
        <label>L10N Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__L10N__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L10N</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzWFMAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Platform_Approval__c</fullName>
        <label>Platform Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Platform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzW5MAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Product_Approval__c</fullName>
        <label>Product Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzWAMAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__QA_Approval__c</fullName>
        <label>Cross-Cloud Exec Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__QA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cross-Cloud Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzTHMAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__QE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TQE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tziTMAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__QPD_Approval__c</fullName>
        <description>Date of QPD Approval</description>
        <label>QPD Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__QPD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quality, Performance and Docs</description>
        <label>QPD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__RM_Approval__c</fullName>
        <label>RM Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RM_Signoff_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release_Approved__c</fullName>
        <label>Release Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Security_Approval__c</fullName>
        <label>Security Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Security__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000u21OMAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Staggered_Release__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staggered Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Systest_Approval__c</fullName>
        <label>PerfEng Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Systest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Performance Engineering (aka SysTest) signoff</description>
        <label>PerfEng</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzVqMAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__TQE_Approval__c</fullName>
        <label>TQE Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__TechOps_Approval__c</fullName>
        <label>TechOps Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__TechOps__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TechOps</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzTgMAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Tech_SVP_Approval__c</fullName>
        <description>Date of Tech SVP Approval</description>
        <label>Tech SVP Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Tech_SVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technology Sr. VP Signoff</description>
        <label>Tech SVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoff1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__UE_Approval__c</fullName>
        <label>UX Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__UE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UX</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000tzW2MAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Release Signoff</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Release Signoff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Signoff</pluralLabel>
    <recordTypes>
        <fullName>agf__GUS</fullName>
        <active>true</active>
        <description>GUS</description>
        <label>GUS</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__R0</fullName>
        <active>true</active>
        <label>R0</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__R1</fullName>
        <active>true</active>
        <label>R1</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__R2</fullName>
        <active>true</active>
        <label>R2</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Release_Freeze</fullName>
        <active>true</active>
        <description>This is the overall release signoff record</description>
        <label>Release Freeze</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Sandbox</fullName>
        <active>true</active>
        <label>Sandbox</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>